# TIGTBIFHIMVA

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml
bot/: Cargo.toml  Dockerfile
bot/src/: main.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.d.ts  main.ts
frontend/src/assets/: brainfuck.psd  now.psd  tank.psd
frontend/src/components/: Footer.vue  TIFH.vue
frontend/src/views/: Home.vue
tgtb/: Cargo.toml  Dockerfile
tgtb/src/: main.rs
