[package]
name = "bot"
version = "1.0.0"
edition = "2021"

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
