[package]
name = "tgtb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["std", "derive"] }
chrono = "0.4"
chrono-tz = "0.4"
rand = "0.8.0"
clap = "2.33.0"